# conreg

./: .gitignore  Cargo.toml  License.md  README.md  pid-play.ipynb  ramp.ipynb  rust-playground.ipynb
examples/: .travis.yml  pid.rs  ramp.rs  random_sensor.rs  target.rs  time_source.rs  timebase.rs
src/: kinetics.rs  lib.rs  pid.rs  ramp.rs  sensor.rs  target.rs  timebase.rs
src/control/: mod.rs  pid.rs
src/controller/: mod.rs  pid-t1.rs  pid.rs  pid_parameter.rs
src/regulation/: mod.rs  ramp.rs
src/steerer/: mod.rs  ramp.rs
