[package]
name = "conreg"
version = "0.1.0"
authors = ["Volker Kempert <volker.kempert@almedso.de>"]
edition = "2018"
description = "Control and Regulation"
documentation = "https://docs.rs/conreg"
homepage = "https://github.com/almedso/conreg"
keywords = ["measurement", "actuator"]
categories = ["no-std"]
license = "ISC"
repository = "https://github.com/almedso/conreg"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "License.md",
]
[dependencies]
libm = { version = "0.2.0", optional = true }
rand = { version = "0.7.3" }

[dev-dependencies]
float-cmp = { version = "0.8.0" }

[dependencies.num-traits]
version = "0.2"
default-features = false

features = ["std", "libm"]

[features]
default = ["std"]
std = []
